--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ main {
     gap: 10px;
     width: 600px;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 #top-banner {
@@ -26,7 +26,7 @@ main {
 }
 
 h1 {
-    font-size: 18pt;
+    font-size: 24pt;
 }
 
 button {
@@ -45,11 +45,46 @@ button {
 .hint-text {
     width: 30%;
     text-align: center;
-    color: white;
-    background-color: grey;
 }
 
 button, input, p {
-    border: 1px solid black;
+    border: 2px solid black;
     padding: 8px;
+}
+
+/* Estilos do Modal */
+#rules-modal {
+    display: none; /* Oculto por padrão */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+}
+
+#close-modal {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#close-modal:hover,
+#close-modal:focus {
+    color: #000;
+    text-decoration: none;
 }
