--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
     margin: 0;
@@ -77,27 +77,40 @@ input {
     border-radius: 5px;
 }
 
-#try-list {
+tbody {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 10px
 }
 
-.try-row {
+tr {
     display: flex;
-    flex-direction: row;
     gap: 10px;
 }
 
-.try-row p {
-    flex: 1;
+th {
+    padding: 2px 10px;
+    font-size: 0.9rem;
+    font-weight: normal;
+    text-align: center !important;
+}
+
+td {
     padding: 7px;
     border: 3px solid white;
     border-radius: 5px;
     text-align: center;
 }
 
-.try-row p:first-child {
+.country-name {
     flex: 3;
     text-align: left;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.country-info {
+    flex: 1;
 }
