--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,19 +9,19 @@
     outline: none;
 
     font-family: Poppins, Arial, Helvetica, sans-serif;
-    font-size: 1.1rem;
+    font-size: 1rem;
     color: white;
 }
 
 :root {
-    font-size: clamp(16px, 1.5vw, 16px);
+    font-size: clamp(0.5vw, 3vw, 16px);
 }
 
 body {
     height: 100vh;
     width: 100vw;
 
-    padding: 10px;
+    padding: clamp(5px, 5vw, 10px);
 
     background-color: #333;
 }
@@ -29,10 +29,10 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 25px;
 
-    min-width: 400px;
-    max-width: 600px;
+    width: 600px;
+    max-width: 95vw;
     margin: auto;
     padding: 5px;
 }
@@ -45,7 +45,7 @@ header {
 }
 
 h1 {
-    font-size: 1.75rem;
+    font-size: 2rem;
 }
 
 input {
@@ -55,6 +55,7 @@ input {
     padding: 10px;
 
     text-align: center;
+    font-size: 1.5rem;
     color: black;
 
     border-radius: 5px;
@@ -68,6 +69,7 @@ input {
 
 #hints > p {
     width: 30%;
+    height: 100%;
     padding: 10px;
 
     text-align: center;
