--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,17 +37,6 @@ main {
     padding: 5px;
 }
 
-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-h1 {
-    font-size: 2rem;
-}
-
 input {
     width: 100%;
 
@@ -64,18 +53,20 @@ input {
 #hints {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 
 #hints > p {
-    width: 30%;
+    /* width: 30%; */
+    flex: 1;
     height: 100%;
     padding: 10px;
 
     text-align: center;
     font-weight: bold;
 
-    border: 3px solid white;
+    /* border: 3px solid white; */
+    background-color: #555;
     border-radius: 5px;
 }
 
@@ -108,7 +99,6 @@ td {
 .country-name {
     text-align: left;
     min-width: 40%;
-    text-align: left;
 }
 
 .country-info {
