--- a/frontend/src/components/RulesModal.css
+++ b/frontend/src/components/RulesModal.css
@@ -15,6 +15,7 @@
     top: 50vh;
     left: 50vw;
     transform: translate(-50%, -50%);
+    width: 600px;
     max-width: 90vw;
 
     display: flex;
